<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:title="@string/search"
        app:showAsAction="always"
        android:icon="@drawable/baseline_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />
    <item
        android:id="@+id/reservateions"
        android:title="@string/reservations"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_hotel"
        />
    <item
        android:id="@+id/view_selector"
        android:title="@string/settings"
        android:icon="@drawable/view_grid"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/setting_button"
        android:title="@string/settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never"
        />
</menu>