<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoomAdd">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/szo"
            android:layout_marginTop="@dimen/top_gap"
            android:layout_marginRight="@dimen/top_gap"
            android:layout_marginLeft="@dimen/top_gap"
            android:textSize="20sp"
            android:textColor="@color/design_default_color_secondary_variant"
            android:id="@+id/szo"

            />

        <EditText
            android:id="@+id/Hotel"
            android:layout_below="@id/szo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/ho"
            android:layout_margin="@dimen/top_gap"
            />

        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_below="@id/Hotel"
            android:text="@string/ci"
            android:layout_margin="@dimen/top_gap"
            />

        <EditText
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/ca"
            android:layout_below="@id/city"
            android:layout_margin="@dimen/top_gap"
            tools:layout_editor_absoluteX="19dp"
            tools:layout_editor_absoluteY="129dp" />
        <EditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/ar"
            android:layout_below="@id/country"
            tools:layout_editor_absoluteX="19dp"
            android:layout_margin="@dimen/top_gap"
            tools:layout_editor_absoluteY="129dp"
            />
        <EditText
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_below="@id/price"
            android:inputType="text"
            android:layout_margin="@dimen/top_gap"
            android:text="@string/tipus"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/type"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:layout_margin="3dp"
                android:text="@string/add"

                />
        </LinearLayout>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>